# express

./: .gitignore  CMakeLists.txt  README.md
include/express/: AInt.hpp  Expr.hpp  Overload.hpp  Showable.hpp  Variable.hpp
src/: AInt.cpp  CMakeLists.txt  Expr.cpp
testing/: CMakeLists.txt  main.cpp
